--- a/0131/css/faq.css
+++ b/0131/css/faq.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
+/* 서식 초기화 */
 *{margin: 0px; padding: 0px;}
 ol, ul, li{list-style: none;}
 a{text-decoration: none; color: #333;}
@@ -9,5 +10,81 @@ body{
   color: #333;
 }
 
-section{}
-section > h2 {display: none;}
+/* 공통 서식 */
+.t_color01{color:#006633}
+
+section{
+  width: 1100px;
+  margin: 0px auto;
+  font-size: 16px;
+}
+section h2 {
+  margin: 20px 0px 50px 0px;
+  line-height: 40px;
+  font-size: 28px;
+}
+fieldset{
+  background: #f4f4f2;
+  text-align: right;
+  line-height: 60px;
+  border:none;
+  margin: 10px 0px;
+}
+fieldset > legend{
+  display: none;
+}
+fieldset #search{
+  border: 1px solid #ccc;
+  width: 300px; height: 30px;
+}
+fieldset input[type=submit]{
+  background: #4d4d3d;
+  color: #fff;
+  padding: 5px 10px;
+  margin: 0px 10px;
+  border-radius: 3px;
+  border: none;
+}
+
+/* 질문 서식 */
+.faq{
+  margin-top: 30px;
+  margin-bottom: 40px;
+  /* padding-top: 10px; */
+  border-top: 1px solid #333;
+  border-bottom: 1px solid #333;;
+}
+.faq > dt::before{
+  content: 'Q ';
+  color:#006633;
+}
+.faq > dd::before{
+  content: 'A ';
+  font-weight: bold;
+}
+.faq > dt{
+  line-height: 60px;
+  border-bottom: 1px solid #ccc;
+  cursor: pointer;
+}
+.faq > dt > i.fas{
+  font-size: 26px;
+  float: right;
+  margin-top:15px; margin-right: 20px;
+}
+
+/* 답변 서식 */
+.faq >dd{
+  background: #f4f4f2;
+  padding: 26px 15px 20px 20px;
+  text-indent: -20px;
+  display: none;
+}
+
+/* 질문에 적용되는 클래스(컬러) */
+.act01{
+  color:#006633;
+}
+.act02{
+  transform: rotate(180deg);
+}
