--- a/0131/css/faq.css
+++ b/0131/css/faq.css
@@ -5,7 +5,7 @@
 ol, ul, li{list-style: none;}
 a{text-decoration: none; color: #333;}
 body{
-  font-family: '맑은 고딕', arial, sans-serif;
+  font-family: 'Nanum Gothic', arial, sans-serif;
   font-size: 12px;
   color: #333;
 }
@@ -84,6 +84,7 @@ fieldset input[type=submit]{
 /* 질문에 적용되는 클래스(컬러) */
 .act01{
   color:#006633;
+  font-weight: 600;
 }
 .act02{
   transform: rotate(180deg);
